# gl-engine

./: .gitignore  App.hpp  CMakeLists.txt  Camera.hpp  Helper.cpp  Helper.hpp  Light.hpp  Mesh.hpp  Player.hpp  RenderSystem.hpp  ResourceManager.hpp  Scene.hpp  SceneNode.hpp  Shader.hpp  Texture.hpp  Transform.hpp  Vertex.hpp  Window.hpp  basic_vertex_shader.vert  build.sh  build_and_run.sh  fragment_shader.frag  gl-tests.sln  gl-tests.vcxproj  gl-tests.vcxproj.filters  main.cpp  readme.md  setup-vcpkg.sh  vcpkg-maybe.json  vcpkg.json  vertex_shader.vert
Event/: EventDispatcher.cpp  EventDispatcher.hpp  Observable.hpp  Observer.hpp
Input/: InputSystem.hpp
Input/InputEvents/: CharacterInputEvent.hpp
Prefabs/: Factory.hpp
UI/: ui.hpp
models/: better-human.mtl  blender-cube.mtl
shaders/: diffuse_lighting_shader.frag  diffuse_lighting_shader.vert  phong-with-uniforms.frag  phong-with-uniforms.vert  phong_shading.frag
src/: App.hpp  Helper.cpp  Light.hpp  Material.hpp  Mesh.hpp  Player.hpp  RenderSystem.hpp  ResourceManager.cpp  Scene.hpp  SceneNode.hpp  Shader.hpp  Window.hpp  main.cpp
src/Event/: EventDispatcher.hpp  EventSystem.hpp  Observable.hpp
src/Input/InputEvents/: CharacterInputEvent.hpp
src/Prefabs/: Factory.hpp
